# django-postgres-rls

./: .gitignore  AUTHENTICATION_SUMMARY.md  README.md  REVIEW.md  RLS_AUTH_BACKEND.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: tests.yml
django_postgres_rls/: __init__.py  apps.py  backends.py  checks.py  expressions.py  management.py  management_utils.py  middleware.py  migrations_examples.py  models.py  signals.py
django_postgres_rls/management/: __init__.py
django_postgres_rls/management/commands/: apply_rls.py
django_postgres_rls/tests/: README.md  __init__.py  conftest.py  integration_utils.py  test_backends.py  test_checks.py  test_expressions.py  test_integration_context_manager.py  test_integration_grants.py  test_integration_middleware.py  test_integration_migrations.py  test_integration_rls_enforcement.py  test_m2m_field.py  test_management.py  test_middleware.py  test_models.py  test_role_permissions.py  test_settings.py  test_signals.py
